--- a/iJinbao/Podfile
+++ b/iJinbao/Podfile
@@ -1,12 +1,13 @@
 # Uncomment this line to define a global platform for your project
 # platform :ios, '9.0'
-
+source 'https://github.com/CocoaPods/Specs.git'
 target 'iJinbao' do
   # Comment this line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for iJinbao
   pod 'FSCalendar'
+  pod 'Alamofire', '~> 4.0'
   target 'iJinbaoTests' do
     inherit! :search_paths
     # Pods for testing
